<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/workordernr" />

        <EditText
            android:id="@+id/text_workordernr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_enginenr" />

        <EditText
            android:id="@+id/text_enginenr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_enginemodel" />

        <EditText
            android:id="@+id/text_enginemodel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />        
    </LinearLayout>

</LinearLayout>
