<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/empty_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/indicator_arrow_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="80.0dip"
                android:layout_marginTop="10.0dip"
                android:contentDescription="@null"
                android:src="@drawable/bg_arrow_up" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_toEndOf="@id/indicator_arrow_create"
                android:layout_marginTop="150dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_container_line_one"
                    android:textAllCaps="true"
                    android:textColor="@color/empty_container_text"
                    android:textSize="@dimen/empty_container_text_size" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_container_hint"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/empty_container_text"
                    android:textSize="@dimen/empty_container_hint_text_size" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30.0dip"
                    android:contentDescription="@null"
                    android:src="@drawable/smiley_happy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/empty_container_line_two"
                    android:textAllCaps="true"
                    android:textColor="@color/empty_container_text"
                    android:textSize="@dimen/empty_container_text_size" />
            </LinearLayout>
</RelativeLayout>
