<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="50dp"
        android:paddingBottom="10dp" >

       <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/button_cancel" 
            android:layout_gravity="center"
            android:paddingLeft="20dip" 
            android:paddingRight="20dip"
            android:paddingTop="30dip"
            android:paddingBottom="30dip"/>
        
        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingTop="30dip"
            android:paddingBottom="30dip"
            android:layout_gravity="center"
            android:text="@string/button_save" />


    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_alignParentTop="true"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" >

            <!-- region for the clock in and clock out -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:padding="15dp" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_sarttime" />

                    <EditText
                        android:id="@+id/edittext_clockintime"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:padding="15dp" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_endtime" />

                    <EditText
                        android:id="@+id/text_enginenr"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>

            <!-- region for activity type -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp" >

                <com.cummins.mowo.widgets.CustomSpinner
                    android:id="@+id/spinner_activitytype"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true"/> <!-- android:entries="@array/activity_types_array" -->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_dynamicform"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" 
                android:padding="15dp">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>