<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activityfragmentlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:padding="10dp"
        android:paddingBottom="10dp" >

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingBottom="10dip"
            android:paddingTop="10dip"
            android:text="@string/button_save" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttons"
        android:layout_alignParentTop="true"
        android:layout_weight="1" >

        <!-- android:layout_above="@id/buttons" -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Clocking Section Header -->

            <TextView
                android:id="@+id/editactivitysectionheader"
                style="@style/SectionHeaderActivityEdit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dip"
                android:text="@string/newactivityheader" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <com.cummins.mowo.widgets.CustomDigitalClock
                    android:id="@+id/digitalclock"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="DigitalClock"
                    android:textSize="36sp" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Current Time" />
            </LinearLayout>

            <!-- region for activity type -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp" >

                <TextView
                    android:id="@+id/editactivitysectiondetailsheader"
                    style="@style/SectionSubHeaderActivityEdit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/activitydetailsheader" />
                <!--
                     <com.cummins.mowo.widgets.CustomSpinner
                    android:id="@+id/spinner_activitytype"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawSelectorOnTop="true" /> 
                -->

                <TextView
                    style="@style/TextAppearance_EditJob_LabelSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_type" />

                <Spinner
                    android:id="@+id/spinner_activitytype"
                    style="@style/TextAppearance_EditJob_Spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-6.0dip"
                    android:drawSelectorOnTop="true"
                    android:minWidth="150.0dip"
                    android:paddingTop="16.0dip"
                    android:prompt="@string/spinner_title" /> <!-- android:entries="@array/activity_types_array" -->



                <TextView
                    android:id="@+id/jobNumberTextView1"
                    style="@style/TextAppearance_EditJob_LabelSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="JOB NUMBER" />

                <!-- select job number -->
<!-- 
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
-->
                    <EditText
                        android:id="@+id/jobnumber_edittext"
                        style="@style/TextAppearance_EditJob_Value"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4.0dip"
                        android:capitalize="sentences"
                        android:clickable="true"
                        android:editable="false"
                        android:hint="Job number from the list of jobs"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:minHeight="48.0dip"
                        android:minWidth="100.0dip"
                        android:singleLine="true" />
 
    <!--                <Button
                        android:id="@+id/PickJobButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="-6.0dip"
                        android:contentDescription="Select job"
                        android:paddingBottom="10dip"
                        android:paddingLeft="14.0dip"
                        android:paddingRight="14.0dip"
                        android:paddingTop="10dip"
                        android:singleLine="true"
                        android:text="Select Job"
                        android:textColorHint="#ff000000" />
                </LinearLayout>
 --> 
                <TextView
                    android:id="@+id/jobNumberTextView2"
                    style="@style/TextAppearance_EditJob_LabelSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="COMMENTS" />

                <EditText
                    android:id="@+id/jobcomments_edittext"
                    style="@style/TextAppearance_EditJob_Value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:capitalize="sentences"
                    android:hint="Job Comments"
                    android:inputType="textCapSentences|textAutoCorrect"
                    android:minHeight="48.0dip"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_dynamicform"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="15dp" >
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>